watch component update
