# backend/docs/swagger.yaml
@@ -52,6 +52,9 @@ definitions:
       id:
         description: ID of the ent.
         type: integer
+      imgurl:
+        description: Imgurl holds the value of the "imgurl" field.
+        type: string
       timestamp:
         description: Timestamp holds the value of the "timestamp" field.
         type: string
@@ -145,64 +148,6 @@ paths:
           schema:
             $ref: '#/definitions/gin.H'
       summary: Create user
-  /users/{email}/{password}:
-    post:
-      consumes:
-      - application/json
-      description: User sign in
-      operationId: user-signin
-      parameters:
-      - description: User entity
-        in: body
-        name: user
-        required: true
-        schema:
-          $ref: '#/definitions/ent.User'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/ent.User'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/gin.H'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/gin.H'
-      summary: User sign in
-  /users/{email}/{tel}:
-    post:
-      consumes:
-      - application/json
-      description: User forgot password
-      operationId: user-forgotpassword
-      parameters:
-      - description: User entity
-        in: body
-        name: user
-        required: true
-        schema:
-          $ref: '#/definitions/ent.User'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/ent.User'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/gin.H'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/gin.H'
-      summary: User forgot password
   /users/{id}:
     delete:
       description: get user by ID
